--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.26",
-    "expo-camera": "~15.0.14",
     "expo-font": "~12.0.9",
     "expo-image": "~1.12.13",
     "expo-linking": "~6.3.1",
@@ -32,11 +31,13 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-vision-camera": "^4.5.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "expo-dev-client": "^4.0.22",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
